// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-vwo-cloud's trackEvent destination action: all fields 1`] = `
Object {
  "d": Object {
    "event": Object {
      "name": "segment.yw0zltLcbQ",
      "props": Object {
        "$visitor": Object {
          "props": Object {
            "vwo_fs_environment": "yw0zltLcbQ",
          },
        },
        "isCustomEvent": true,
        "page": Object {
          "testType": "yw0zltLcbQ",
        },
        "testType": "yw0zltLcbQ",
        "vwoMeta": Object {
          "metric": Object {},
          "ogName": "yw0zltLcbQ",
          "source": "segment.cloud",
        },
      },
      "time": null,
    },
    "msgId": "yw0zltLcbQ-NaN",
    "sessionId": null,
    "visId": "yw0zltLcbQ",
    "visitor": Object {
      "props": Object {
        "vwo_fs_environment": "yw0zltLcbQ",
      },
    },
  },
}
`;

exports[`Testing snapshot for actions-vwo-cloud's trackEvent destination action: required fields 1`] = `
Object {
  "d": Object {
    "event": Object {
      "name": "segment.yw0zltLcbQ",
      "props": Object {
        "$visitor": Object {
          "props": Object {
            "vwo_fs_environment": "yw0zltLcbQ",
          },
        },
        "isCustomEvent": true,
        "page": Object {},
        "vwoMeta": Object {
          "metric": Object {},
          "ogName": "yw0zltLcbQ",
          "source": "segment.cloud",
        },
      },
      "time": 1681990265864,
    },
    "msgId": "yw0zltLcbQ-1681990265",
    "sessionId": 1681990265,
    "visId": "yw0zltLcbQ",
    "visitor": Object {
      "props": Object {
        "vwo_fs_environment": "yw0zltLcbQ",
      },
    },
  },
}
`;
